--- a/sections/testimonials.liquid
+++ b/sections/testimonials.liquid
@@ -1,7 +1,7 @@
 <section class="max-width mx-auto py-12 lg:py-24 space-y-12">
   <div class="text-center mb-6 lg:mb-8">
-    <h2 class="heading-sm clr-general-headings mb-4">{{ section.settings.testimonails_heading }}</h2>
-    <p class="body-md clr-general-text">{{ section.settings.testimonails_subheading }}</p>
+    <h2 class="heading-sm clr-general-headings mb-4">{{ section.settings.testimonials_heading }}</h2>
+    <p class="body-md clr-general-text">{{ section.settings.testimonials_subheading }}</p>
   </div>
   <div class="main-carousel" data-flickity='{ "cellAlign": "left", "contain": true, "prevNextButtons": false, "pageDots": true }'>
     {% for block in section.blocks %}
@@ -52,6 +52,23 @@
 
 </style>
 
+<script>
+
+var options = {
+  groupCells: false,
+};
+
+// enable prev/next buttons at 768px
+if ( matchMedia('screen and (min-width: 768px)').matches ) {
+  options.groupCells = true;
+  options.groupCells = 3;
+}
+
+$('.main-carousel').flickity( options );
+
+
+</script>
+
 {% schema %}
     {
       "name": "Testimonials",
@@ -63,13 +80,13 @@
         },
         {
             "type": "text",
-            "id": "testimonails_heading",
+            "id": "testimonials_heading",
             "label": "Heading",
             "default": "What customers are saying"
         },
         {
             "type": "text",
-            "id": "testimonails_subheading",
+            "id": "testimonials_subheading",
             "label": "Subheading",
             "default": "Fresh announcement for Premium Shopify Theme with link."
         },
@@ -108,12 +125,21 @@
             {
                 "type": "select",
                 "id": "star_reviews",
+                "label": "Star rating",
                 "options": [
-                { "value": "4_out_of_5", "label": "4 out of 5"},
-                { "value": "4.5_out_of_5", "label": "4.5 out of 5"},
-                { "value": "5_out_of_5", "label": "5 out of 5"}
-                ],
-                "label": "Star rating"
+                  { 
+                    "value": "4_out_of_5",
+                    "label": "4 out of 5"
+                  },
+                  { 
+                    "value": "4.5_out_of_5",
+                    "label": "4.5 out of 5"
+                  },
+                  { 
+                    "value": "5_out_of_5",
+                    "label": "5 out of 5"
+                  }
+                ]
             },
             {
               "type": "textarea",
