--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -7,7 +7,13 @@
   <meta name="description" content="{{ page_description | escape }}">
   <link rel="canonical" href="{{ canonical_url }}">
   <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
+  {%- if settings.favicon != blank -%}
+    <link rel="shortcut icon" href="{{ settings.favicon | img_url: '32x32' }}" type="image/png"/>
+  {%- endif -%}
+
   {{ content_for_header }} <!-- Header hook for plugins -->
+  {{ "js.cookie.min.js" | asset_url | script_tag }}
+  
   {{ 'jquery.modal.css' | asset_url | stylesheet_tag }}
   {{ 'application.css' | asset_url | stylesheet_tag }}
   {{ 'custom.css' | asset_url | stylesheet_tag }}
@@ -29,6 +35,7 @@
     {{ content_for_layout }}
   </main>
   {% section 'footer' %}
+  {% render 'cookies' %} 
   
   {{ 'jquery.js' | asset_url | script_tag }}
   {{ 'jquery.modal.min.js' | asset_url | script_tag }}
@@ -37,6 +44,7 @@
   <!-- Cart.js -->
   {{ 'rivets-cart.min.js' | asset_url | script_tag }}
   {{ 'option_selection.js' | shopify_asset_url | script_tag }}
+  
   <!-- Initialise Cart.js once the page has loaded -->
   <script type="text/javascript">
     $(function () {
