Testimonials stars color + Newsletter subheading color

--- a/sections/newsletter.liquid
+++ b/sections/newsletter.liquid
@@ -4,7 +4,7 @@
         <h2 class="heading-sm clr-general-headings" for="Email">{{ section.settings.section_title | escape }}</h2>
         {% endif %}
         {% if section.settings.subheading != blank %}
-        <p class="body-md clr-general-light-text">{{ section.settings.subheading | escape }}</p>
+        <p class="body-md clr-general-text">{{ section.settings.subheading | escape }}</p>
         {% endif %}
     </div>
   
