--- a/sections/testimonials.liquid
+++ b/sections/testimonials.liquid
@@ -18,14 +18,14 @@
           {% endif %} object-cover mb-6" src="{{ block.settings.testimonials_avatar | img_url: '128x128' }}" alt="">
           {% endunless %}
           {% if block.settings.star_reviews == '4_out_of_5' %}
-            <div class="mb-4">
+            <div class="mb-4 clr-product-review-star">
               <span class="icon icon-star"></span>
               <span class="icon icon-star"></span>
               <span class="icon icon-star"></span>
               <span class="icon icon-star"></span>
             </div>
           {% elsif block.settings.star_reviews == '5_out_of_5' %}
-            <div class="mb-4">
+            <div class="mb-4 clr-product-review-star">
               <span class="icon icon-star"></span>
               <span class="icon icon-star"></span>
               <span class="icon icon-star"></span>
