--- a/templates/customers/account.liquid
+++ b/templates/customers/account.liquid
@@ -1,26 +1,73 @@
-<!-- /templates/customers/account.liquid -->
+<div class="max-w-6xl mx-auto px-4 2xl:px-0">
+  <div class="py-12 sm:py-16 flex justify-between items-center">
+    <h1 class="heading-lg clr-general-headings">{{ 'customer.account.title' | t }}</h1>
+    <div>
+      <a class="flex space-x-2" href="/account/logout">
+        <p class="body-md clr-general-text">Logout</p>
+        <span aria-hidden="true" class="text-2xl icon icon-log-out"></span>
+      </a>
+    </div>
+  </div>
 
-{% if customer.default_address %}
-  <h2>Address</h2>
-  <p>{{ customer.default_address.address1 }}</p>
-  {% if customer.default_address.address2 != "" %}
-    <p>{{ customer.default_address.address2 }}</p>
-  {% endif %}
-  <p>{{ customer.default_address.city}}, {% if address.province_code %}{{ customer.default_address.province_code }}, {% endif %}{{ customer.default_address.country }}</p>
-  <p>{{ customer.default_address.zip }}</p>
-  <p>{{ customer.default_address.phone }}</p>
-{% endif %}
+  <div class="grid grid-cols-1 sm:grid-cols-3 gap-5 mb-16">
+    <div class="sm:col-span-2">
+      <h2 class="mb-2 heading-sm clr-general-headings">{{ 'customer.orders.title' | t }}</h2>
+      {% paginate customer.orders by 20 %}
+        {% if customer.orders.size != 0 %}
+          <div class="border rounded-md px-4 text-sm"><!-- Start of Order history box -->
+            <div class="hidden lg:grid lg:grid-cols-5 font-semibold border-b py-4">
+              <p class="body-sm clr-general-text">{{ 'customer.orders.order_number' | t }}</p>
+              <p class="body-sm clr-general-text">{{ 'customer.orders.date' | t }}</p>
+              <p class="body-sm clr-general-text">{{ 'customer.orders.payment_status' | t }}</p>
+              <p class="body-sm clr-general-text">{{ 'customer.orders.fulfillment_status' | t }}</p>
+              <p class="lg:text-right body-sm clr-general-text">{{ 'customer.orders.total' | t }}</p>
+            </div>
+            <div class="divide-y">
+              {% for order in customer.orders %}
+                <div class="grid grid-cols-2 lg:grid-cols-1 lg:my-0">
+                  <div class="lg:hidden font-semibold py-4">
+                    <p class="lg:hidden body-sm clr-general-text">{{ 'customer.orders.order_number' | t }}</p>
+                    <p class="lg:hidden body-sm clr-general-text">{{ 'customer.orders.date' | t }}</p>
+                    <p class="lg:hidden body-sm clr-general-text">{{ 'customer.orders.payment_status' | t }}</p>
+                    <p class="lg:hidden body-sm clr-general-text">{{ 'customer.orders.fulfillment_status' | t }}</p>
+                    <p class="lg:text-right lg:hidden body-sm clr-general-text">{{ 'customer.orders.total' | t }}</p>
+                  </div>
+                  <div class="lg:grid lg:grid-cols-5 text-right py-4 lg:text-left">
+                    <p class="body-sm clr-general-text">{{ order.name | link_to: order.customer_url }}</p>
+                    <p class="body-sm clr-general-text">{{ order.created_at | date: format: 'month_day_year' }}</p>
+                    <p class="body-sm clr-general-text">{{ order.financial_status_label }}</p>
+                    <p class="lg:text-left body-sm clr-general-text">{{ order.fulfillment_status_label }}</p>
+                    <p class="lg:text-right body-sm clr-general-text">{{ order.total_price | money }}</p>
+                  </div>
+                </div>
+              {% endfor %}
+            </div>
+          </div><!-- End of Order history box -->
+        {% else %}
+          <p class="text-center body-md clr-general-text p-12">{{ 'customer.orders.none' | t }}</p>
+        {% endif %}
 
-<div id="customer_orders">
-  <h2>Orders</h2>
-  {% paginate customer.orders by 10 %}
-  {% if customer.orders.size != 0 %}
-    {% for order in customer.orders %}
-      <!-- order details here -->
-    {% endfor %}
-  {% else %}
-    <p>You haven't placed any orders yet.</p>
-  {% endif %}
-  {{ paginate | default_pagination }}
-  {% endpaginate %}
+        {% if paginate.pages > 1 %}
+        <div class="mt-5">
+          {% include 'pagination' %}       
+        </div>   
+        {% endif %}
+
+      {% endpaginate %}        
+
+    </div>
+    <div class="order-first sm:order-none">
+      <h2 class="mb-2 heading-sm clr-general-headings">{{ 'customer.account.details' | t }}</h2>
+      <div class="border rounded-md p-4 text-sm">
+       {% if customer.addresses_count > 0 %}
+        <div class="mb-2 body-sm clr-general-text ">
+          {{ customer.default_address | format_address }}
+        </div>
+        {% endif %}
+        <div >
+          <a class="body-sm clr-general-links underline" href="/account/addresses">{{ 'customer.account.view_addresses' | t }} ({{ customer.addresses_count }})</a>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
