--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -25,10 +25,9 @@
   <div class="border-b border-gray-200 relative z-10"  id="header">
     {% section 'header' %}
   </div>
-  <main role="main" class="content">
+  <main role="main" class="{% if template == index %}content{% endif %}">
     {{ content_for_layout }}
   </main>
-  {% section 'video' %}
   {% section 'footer' %}
   
   {{ 'jquery.js' | asset_url | script_tag }}
