--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -2,83 +2,67 @@
 {% assign featured_image = current_variant.featured_image | default: product.featured_image %}
 
 <!-- Gallery & Product Form -->
-
 <div data-section-id="{{ section.id }}" data-section-type="product" data-enable-history-state="true" itemscope>
   <div class="max-width mx-auto">
     <div class="grid grid-cols-1 lg:grid-cols-5 gap-10 mt-4">
-      
       <div class="lg:col-span-3">
         <div class="flex mb-4">
           {% include 'breadcrumbs' %}
         </div>
-
-        <!-- Slider -->
+        <div></div>
           <div class="main-carousel carousel mb-5" data-flickity='{ "cellAlign": "left", "contain": true, "prevNextButtons": false, "pageDots": true }'>
               {% for media in product.media %}
-                <div class="carousel-cell aspect-w-1 aspect-h-1 sm:aspect-w-4 sm:aspect-h-3 w-full" >
+                <div class="carousel-cell aspect-w-1 aspect-h-1 w-full" >
                   <img class="object-cover lazy" src="{{ media | img_url: '1000x1000'}}" alt="{{ media.alt }}">
                 </div>
               {% endfor %}
           </div>
           <!-- <div class="nav-carousel carousel">
               {% for media in product.media %}
-                <div class="carousel-cell" >
-                    <img class="object-cover lazy" src="{{ media | img_url: '500x500'}}" alt="{{ media.alt }}">
+                <div class="carousel-cell">
+                    <img class="object-cover" src="{{ media | img_url: '500x500'}}" alt="{{ media.alt }}">
                 </div>
               {% endfor %}
           </div> -->
-      </div>
 
-      <!-- Product Form + Product Tabs -->
+      </div>
       <div class="lg:col-span-2">
         {% include 'product-form' %}
         {% include 'product-tabs' %}
       </div>
-      
     </div>
   </div>
 </div>
 
-<!-- {% include 'addtocart-bottom' %} -->
+{% include 'sticky-add-to-cart' %}
 
 
-<!-- Related products -->
-
-<div class="max-width mx-auto">
-  <div class="{% if settings.shopify_reviews == true %} 
-  block
-  {% elsif settings.shopify_reviews == false %}
-  hidden
-  {% endif %}">
-  <div id="shopify-product-reviews" data-id="{{product.id}}">{{ product.metafields.spr.reviews }}</div>
-</div>
-  <div class="yotpo yotpo-main-widget
-  {%- if settings.yotpo_reviews != true -%} 
-  flex
-  {% elsif settings.yotpo_reviews == false %}
-  hidden
-  {%- endif -%}"
-  data-product-id="{{ product.id }}" data-name="{{ product.title | escape }}" data-url="{{ shop.url }}{{ product.url }}" data-image-url="{{ product.featured_image | product_img_url: 'large' |replace: '?', '%3F' | replace: '&','%26'}}" data-price="{{ variant.price | money_without_currency }}"
-data-currency=“{{ shop.currency }}” data-description=“{{ product.description | escape }}“>
-{%- assign yotpo_offload_content = shop.metafields.yotpo.yotpo_offload_content %}
-  {%- assign time_now = 'now' | date: '%s' %}
-  {%- assign yotpo_live_time = shop.metafields.yotpo.yotpo_live | date: '%s' %}
-  {%- assign diff_seconds_from_live = time_now | minus: yotpo_live_time %}
-  {%- assign yotpo_main_widget_last_updated = product.metafields.yotpo.main_widget_update_time | date: '%s' %}
-  {%- assign diff_seconds_from_last_main_widget_update = time_now | minus: yotpo_main_widget_last_updated %}
-  {%- if yotpo_live_time and diff_seconds_from_live < 86400 or yotpo_main_widget_last_updated and diff_seconds_from_last_main_widget_update < 86400 -%}
-    {%- assign yotpo_main_widget_obsolete = false %}
-  {%- else %}
-    {%- assign yotpo_main_widget_obsolete = true %}
-  {%- endif %}
-  {%- if yotpo_offload_content == 'yes' and yotpo_main_widget_obsolete != true -%}
-    {%- for field in product.metafields.yotpo_reviews -%}
-      {{ field | last }}
-    {%- endfor -%}
-  {%- endif %}
-</div>
-</div>
-
+{% schema %}
+{
+  "name": "Product tabs",
+  "max_blocks": 4,
+  "blocks": [
+    {
+      "name": "Product tab",
+      "type": "product_tab",
+      "settings": [
+        {
+          "type": "text",
+          "id": "product_tab_heading",
+          "label": "Heading",
+          "default": "Free Shipping"
+        },
+        {
+          "type": "textarea",
+          "id": "product_tab_text",
+          "label": "Text",
+          "default": "Lorem ipsum dolor asimet..."
+        }
+      ]
+    }
+  ]
+}
+{% endschema %}
 
 <script>
     // Function to get the value of the checked radio button in the form.
@@ -93,8 +77,6 @@ data-currency=“{{ shop.currency }}” data-description=“{{ product.descripti
         }
         return val;
     }
-
-    
 
     {% unless product.has_only_default_variant %}
       $(function(){
@@ -118,7 +100,6 @@ data-currency=“{{ shop.currency }}” data-description=“{{ product.descripti
       });
     {% endunless %}
     
-    
 
     // Function runs every time a variant radio button or select dropdown changes.
     function updateProductInformation() {
@@ -138,7 +119,6 @@ data-currency=“{{ shop.currency }}” data-description=“{{ product.descripti
           var opt2 = document.getElementById('select_two').value;
         {% endif %}
       {% endif %}
-
 
       {% if product.options[2] %}
         {% if product.options[2] == 'Material' %}
@@ -197,3 +177,4 @@ data-currency=“{{ shop.currency }}” data-description=“{{ product.descripti
       }
     }
 </script>
+
