--- a/snippets/breadcrumbs.liquid
+++ b/snippets/breadcrumbs.liquid
@@ -3,13 +3,13 @@
 <div class="breadcrumbs text-sm" role="navigation" aria-label="breadcrumbs">
   <ol class="breadcrumbs__list">
     <li class="breadcrumbs__item">
-      <a class="breadcrumbs__link" href="/">Home</a>
+      <a class="breadcrumbs__link clr-general-links" href="/">Home</a>
       
     </li>
     {%- case t -%}
       {%- when 'page' -%}
         <li class="breadcrumbs__item">
-          <a class="breadcrumbs__link" href="{{ page.url }}" aria-current="page">{{ page.title }}</a>
+          <a class="breadcrumbs__link clr-general-links" href="{{ page.url }}" aria-current="page">{{ page.title }}</a>
         </li>
       {%- when 'product' -%}
         {%- if collection.url -%}
@@ -18,7 +18,7 @@
           </li>
         {%- endif -%}
         <li class="breadcrumbs__item">
-          <a class="breadcrumbs__link" href="{{ product.url }}" aria-current="page">{{ product.title }}</a>
+          <a class="breadcrumbs__link clr-general-links" href="{{ product.url }}" aria-current="page">{{ product.title }}</a>
         </li>
       {%- when 'collection' and collection.handle -%}
         {%- if current_tags -%}
@@ -27,11 +27,11 @@
           </li>
           <li class="breadcrumbs__item">
             {%- capture tag_url -%}{{ collection.url }}/{{ current_tags | join: "+"}}{%- endcapture -%}
-            <a class="breadcrumbs__link" href="{{ tag_url }}" aria-current="page">{{ current_tags | join: " + "}}</a>
+            <a class="breadcrumbs__link clr-general-links" href="{{ tag_url }}" aria-current="page">{{ current_tags | join: " + "}}</a>
           </li>
         {%- else -%}
           <li class="breadcrumbs__item">
-            <a class="breadcrumbs__link" href="{{ collection.url }}" aria-current="page">{{ collection.title }}</a>
+            <a class="breadcrumbs__link clr-general-links" href="{{ collection.url }}" aria-current="page">{{ collection.title }}</a>
           </li>
         {%- endif -%}
       {%- when 'blog' -%}
@@ -41,11 +41,11 @@
           </li>
           <li class="breadcrumbs__item">
             {%- capture tag_url -%}{{blog.url}}/tagged/{{ current_tags | join: "+" }}{%- endcapture -%}
-            <a class="breadcrumbs__link" href="{{ tag_url }}" aria-current="page">{{ current_tags | join: " + " }}</a>
+            <a class="breadcrumbs__link clr-general-links" href="{{ tag_url }}" aria-current="page">{{ current_tags | join: " + " }}</a>
           </li>
         {%- else -%}
           <li class="breadcrumbs__item">
-            <a class="breadcrumbs__link" href="{{ blog.url }}" aria-current="page">{{ blog.title }}</a>
+            <a class="breadcrumbs__link clr-general-links" href="{{ blog.url }}" aria-current="page">{{ blog.title }}</a>
           </li>
         {%- endif -%}
       {%- when 'article' -%}
@@ -53,11 +53,11 @@
           {{ blog.title | link_to: blog.url }}
         </li>
         <li class="breadcrumbs__item">
-          <a class="breadcrumbs__link" href="{{ article.url }}" aria-current="page">{{ article.title }}</a>
+          <a class="breadcrumbs__link clr-general-links" href="{{ article.url }}" aria-current="page">{{ article.title }}</a>
         </li>
       {%- else -%}
         <li class="breadcrumbs__item">
-          <a class="breadcrumbs__link" href="{{ request.path }}" aria-current="page">{{ page_title }}</a>
+          <a class="breadcrumbs__link clr-general-links" href="{{ request.path }}" aria-current="page">{{ page_title }}</a>
         </li>
     {%- endcase -%}
   </ol>
@@ -65,29 +65,37 @@
 {%- endunless -%}
 
 <style>
+
   .breadcrumbs__list {
     list-style-type: none;
     margin: 0;
     padding: 0;
+    font-size: var(--body-sm);
   }
   .breadcrumbs__item {
     display: inline-block;
   }
+
+  .breadcrumbs__item a {
+    color: var(--clr-general-links);
+  }
+
   .breadcrumbs__item:not(:last-child):after {
-      content:"\2044";
-      margin: 0 8px;
+      content: "\e930";
+      color: var(--clr-general-light-text);
+      font-family: 'feather' !important;
+      margin: 8px;
   }
   .breadcrumbs__link {
-    text-decoration: underline;
+    /* text-decoration: underline; */
   }
   .breadcrumbs__link[aria-current="page"] {
-    color: inherit;
-    color:gray;
+    color: var(--clr-general-light-text);
     font-weight: normal;
     text-decoration: none;
   }
   .breadcrumbs__link[aria-current="page"]:hover,
   .breadcrumbs__link[aria-current="page"]:focus {
-    text-decoration: underline;
+    /* text-decoration: underline; */
   }
 </style>
