--- a/snippets/product-tabs.liquid
+++ b/snippets/product-tabs.liquid
@@ -1,31 +1,16 @@
 <div class="divide-y border-t border-b addtocart2">
-    <div class="py-8">
-      <div class="flex justify-between cursor-pointer clickDropdown">
-        <h4 class="text-lg font-medium">Size Guide</h4>
+  {% for block in section.blocks %}
+    
+    <div>
+      <div class="flex justify-between py-8 cursor-pointer clickDropdown">
+        <h4 class="text-lg font-medium">{{ block.settings.product_tab_heading }}</h4>
         <span aria-hidden="true" class="text-2xl flex-shrink-0 icon icon-chevron-down chevronDesc"></span>
       </div>
-      <div class="mt-4 md:mt-8 hidden dropdownItem">
-        <p>{{ product.description }}</p>
+      <div class="hidden dropdownItem mb-8">
+        <p>{{ block.settings.product_tab_text }}</p>
       </div>
     </div>
 
-    <div class="py-8">
-      <div class="flex justify-between cursor-pointer clickDropdown">
-        <h4 class="text-lg font-medium">Free Shipping & Returns</h4>
-        <span aria-hidden="true" class="text-2xl flex-shrink-0 icon icon-chevron-down chevronDesc"></span>
-      </div>
-      <div class="mt-4 md:mt-8 hidden dropdownItem">
-        <p>{{ product.description }}</p>
-      </div> 
-    </div>
+  {% endfor %}
 
-    <div class="py-8">
-      <div class="flex justify-between cursor-pointer clickDropdown">
-        <h4 class="text-lg font-medium">Reviews</h4>
-        <span aria-hidden="true" class="text-2xl flex-shrink-0 icon icon-chevron-down chevronDesc"></span>
-      </div>
-      <div class="mt-4 md:mt-8 hidden dropdownItem">
-        <p>{{ product.description }}</p>
-      </div>
-    </div>
-  </div>
+  </div> 
