--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -1,1 +1,4 @@
 {% section 'product-template' %}
+{% section 'product-recommendations' %}
+{% section 'reviews' %}
+{% include 'sticky-add-to-cart' %}
