--- a/templates/customers/order.liquid
+++ b/templates/customers/order.liquid
@@ -3,7 +3,7 @@
     <h1 class="heading-lg clr-general-headings">{{ 'customer.account.title' | t }}</h1>
     <div>
       <a class="flex space-x-2" href="/account">
-        <p class="body-md clr-general-text underline">{{ 'customer.account.return' | t }}</p>
+        <p class="body-md clr-general-links underline">{{ 'customer.account.return' | t }}</p>
       </a>
     </div>
   </div>
@@ -16,25 +16,25 @@
       </div>
       <div class="border rounded-md px-4 text-sm"><!-- Start of Order history box -->
         <div class="hidden lg:grid lg:grid-cols-5 font-semibold border-b py-4">
-          <p class="body-sm clr-general-text">{{ 'customer.order.product' | t }}</p>
-          <p class="body-sm clr-general-text">{{ 'customer.order.sku' | t }}</p>
-          <p class="body-sm clr-general-text">{{ 'customer.order.price' | t }}</p>
-          <p class="body-sm clr-general-text">{{ 'customer.order.quantity' | t }}</p>
-          <p class="lg:text-right body-sm clr-general-text">{{ 'customer.order.total' | t }}</p>
+          <p class="body-sm clr-general-headings">{{ 'customer.order.product' | t }}</p>
+          <p class="body-sm clr-general-headings">{{ 'customer.order.sku' | t }}</p>
+          <p class="body-sm clr-general-headings">{{ 'customer.order.price' | t }}</p>
+          <p class="body-sm clr-general-headings">{{ 'customer.order.quantity' | t }}</p>
+          <p class="lg:text-right body-sm clr-general-headings">{{ 'customer.order.total' | t }}</p>
         </div>
         <div class="divide-y border-b">
           <div class="grid grid-cols-2 lg:grid-cols-1 lg:my-0">
             <div class="lg:hidden font-semibold py-4">
-              <p class="lg:hidden body-sm clr-general-text">{{ 'customer.order.product' | t }}</p>
-              <p class="lg:hidden body-sm clr-general-text">{{ 'customer.order.sku' | t }}</p>
-              <p class="lg:hidden body-sm clr-general-text">{{ 'customer.order.price' | t }}</p>
-              <p class="lg:hidden body-sm clr-general-text">{{ 'customer.order.quantity' | t }}</p>
-              <p class="lg:text-right lg:hidden body-sm clr-general-text">{{ 'customer.order.total' | t }}</p>
+              <p class="lg:hidden body-sm clr-general-headings">{{ 'customer.order.product' | t }}</p>
+              <p class="lg:hidden body-sm clr-general-headings">{{ 'customer.order.sku' | t }}</p>
+              <p class="lg:hidden body-sm clr-general-headings">{{ 'customer.order.price' | t }}</p>
+              <p class="lg:hidden body-sm clr-general-headings">{{ 'customer.order.quantity' | t }}</p>
+              <p class="lg:text-right lg:hidden body-sm clr-general-headings">{{ 'customer.order.total' | t }}</p>
             </div>
             <div class="lg:grid lg:grid-cols-5 text-right py-4 lg:text-left">
               {% for line_item in order.line_items %}
-              <p class="body-sm clr-general-text">{{ line_item.title | link_to: line_item.product.url }}</p>
-              <p class="body-sm clr-general-text">{{ line_item.sku }}</p>
+              <p class="body-sm clr-general-links">{{ line_item.title | link_to: line_item.product.url }}</p>
+              <p class="body-sm clr-general-headings">{{ line_item.sku }}</p>
               <p class="body-sm clr-general-text">{{ line_item.price | money }}</p>
               <p class="lg:text-left body-sm clr-general-text">{{ line_item.quantity }}</p>
               <p class="lg:text-right body-sm clr-general-text">{{ line_item.quantity | times: line_item.price | money }}</p>
@@ -47,33 +47,33 @@
           <div class="lg:divide-y py-4 lg:py-0">
 
             <div class="flex justify-between lg:py-4">
-              <p class="body-sm clr-general-text font-semibold">{{ 'customer.order.subtotal' | t }}</p>
-              <p class="body-sm clr-general-text">{{ order.line_items_subtotal_price | money }}</p>
+              <p class="body-sm clr-general-headings font-semibold">{{ 'customer.order.subtotal' | t }}</p>
+              <p class="body-sm clr-general-headings">{{ order.line_items_subtotal_price | money }}</p>
             </div>
 
             {% for discount in order.discounts %}
             <div class="flex justify-between lg:py-4">
-              <p class="body-sm clr-general-text font-semibold">{{ discount.code }} {{ 'customer.order.discount' | t }}</p>
+              <p class="body-sm clr-general-headings font-semibold">{{ discount.code }} {{ 'customer.order.discount' | t }}</p>
               <p class="body-sm clr-general-text">{{ discount.savings | money }}</p>
             </div>
             {% endfor %}
 
             {% for shipping_method in order.shipping_methods %}
             <div class="flex justify-between lg:py-4">
-              <p class="body-sm clr-general-text font-semibold">{{ 'customer.order.shipping' | t }} ({{ shipping_method.title }})</p>
+              <p class="body-sm clr-general-headings font-semibold">{{ 'customer.order.shipping' | t }} ({{ shipping_method.title }})</p>
               <p class="body-sm clr-general-text">{{ shipping_method.price | money }}</p>
             </div>
             {% endfor %}
 
             {% for tax_line in order.tax_lines %}
             <div class="flex justify-between lg:py-4">
-              <p class="body-sm clr-general-text font-semibold">{{ 'customer.order.tax' | t }} ({{ tax_line.title }} {{ tax_line.rate | times: 100 }}%)</p>
+              <p class="body-sm clr-general-headings font-semibold">{{ 'customer.order.tax' | t }} ({{ tax_line.title }} {{ tax_line.rate | times: 100 }}%)</p>
               <p class="body-sm clr-general-text">{{ tax_line.price | money }}</p>
             </div>
             {% endfor %}
 
             <div class="flex justify-between lg:py-4">
-              <p class="body-sm clr-general-text font-semibold">{{ 'customer.order.total' | t }}</p>
+              <p class="body-sm clr-general-headings font-semibold">{{ 'customer.order.total' | t }}</p>
               <p class="body-sm clr-general-text">{{ order.total_price | money }} {{ order.currency }}</p>
             </div>
           </div>
@@ -89,7 +89,7 @@
         </div>
         <div class="border rounded-md p-4 space-y-4 text-sm">
           <div>
-            <p class="body-sm clr-general-text mr-1"><span class="body-sm font-medium clr-general-text mr-1">{{ 'customer.order.payment_status' | t }}:</span>{{ order.financial_status_label }}</p>
+            <p class="body-sm clr-general-headings mr-1"><span class="body-sm font-medium clr-general-headings mr-1">{{ 'customer.order.payment_status' | t }}:</span>{{ order.financial_status_label }}</p>
           </div>
           {{ order.billing_address | format_address }}
         </div>
@@ -100,7 +100,7 @@
         </div>
         <div class="border rounded-md p-4 space-y-4 text-sm">
           <div>
-            <p class="body-sm clr-general-text mr-1"><span class="body-sm font-medium clr-general-text mr-1">{{ 'customer.order.fulfillment_status' | t }}:</span>{{ order.fulfillment_status_label }}</p>
+            <p class="body-sm clr-general-headings mr-1"><span class="body-sm font-medium clr-general-headings mr-1">{{ 'customer.order.fulfillment_status' | t }}:</span>{{ order.fulfillment_status_label }}</p>
           </div>
           {{ order.shipping_address | format_address }}
         </div>
