--- a/snippets/collection-tile.liquid
+++ b/snippets/collection-tile.liquid
@@ -59,10 +59,10 @@
 
     <!-- Modal -->
   
-    <!-- <div id="ex1" class="modal z-50">
-      <p>Thanks for clicking. That felt good.</p>
+    <div id="ex1" class="modal z-50">
+      {% include 'product-form' %}
       <a href="#" rel="modal:close">Close</a>
-    </div> -->
+    </div>
     
     <!-- Product hover -->
     {% if section.settings.collection_addtocart_quickshop_activate == 'hover' %}
