--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -18,9 +18,11 @@
             {% if block.type == 'block-1' %}
                 <div class="text-center space-y-6 md:text-left">
                     <h3 class="mb-4 clr-footer-headings heading-xs">{{ block.settings.heading_footer }}</h3>
+                    {% if section.settings.logo %}
                     <a href="/">
                          <img class="object-cover mx-auto md:m-0 h-{{ block.settings.size }}" src="{{ block.settings.logo | img_url: 'master' }}" alt="{{ shop.name }}">
                     </a>
+                    {% endif %}
                     <p class="mb-8 clr-footer-text body-md ">{{ block.settings.paragraph_footer }}</p>
                     <div class="social-icons flex justify-center md:justify-start space-x-2">
                         {% if block.settings.footer_social_enable %}
