--- a/sections/highlights.liquid
+++ b/sections/highlights.liquid
@@ -1,14 +1,3 @@
-<!-- <p class="heading-xl">Lorem ipsum dolor sit amet,<br>consectetur adipiscing elit.</p><br><br>
-<p class="heading-lg">Lorem ipsum dolor sit amet,<br>consectetur adipiscing elit.</p><br><br>
-<p class="heading-md">Lorem ipsum dolor sit amet,<br>consectetur adipiscing elit.</p><br><br>
-<p class="heading-sm">Lorem ipsum dolor sit amet,<br>consectetur adipiscing elit.</p><br><br>
-
-<p class="body-md">Lorem ipsum dolor sit amet,<br>consectetur adipiscing elit.</p><br><br>
-<p class="body-sm">Lorem ipsum dolor sit amet,<br>consectetur adipiscing elit.</p><br><br>
-<p class="body-xs">Lorem ipsum dolor sit amet,<br>consectetur adipiscing elit.</p><br><br>  -->
-
- 
-
 <div class="clr-highlights-background">
     <div class="max-width mx-auto">
             <div class="py-6{% if section.settings.highlights_layout_mobile != 'highlight-grid' %} main-carousel lg:flex {% elsif section.settings.highlights_layout_mobile == 'highlight-grid' %} grid grid-cols-2 gap-4 md:flex md:justify-between {% endif %}" data-flickity='{ "cellAlign": "left", "contain": true, "pageDots": false, "watchCSS": true, "prevNextButtons": false }'> 
@@ -161,9 +150,20 @@
     #shopify-section-{{ section.id }} .carousel-cell { {% if section.blocks.size == 1 %} width:100%; {% else %} width: 60%; {% endif %} {% if section.settings.highlights_layout_mobile == 'highlight-grid' %} width: 100%; {% endif %} }
     #shopify-section-{{ section.id }} .main-carousel { width: 100%; }
     #shopify-section-{{ section.id }} .main-carousel:after { content: 'flickity'; display: none; }
-    @media screen and ( min-width: 1024px ) { #shopify-section-{{ section.id }} .main-carousel:after { content: ''; } }
+
+    @media screen and ( min-width: 1024px ) {
+        #shopify-section-{{ section.id }} .main-carousel:after {
+            content: '';
+        }
+    }
     @media screen and ( min-width: 640px ) {
-        #shopify-section-{{ section.id }} .carousel-cell { {% if section.blocks.size == 1 %} width:100%; {% else %} width: 35%; {% endif %} }
+        #shopify-section-{{ section.id }} .carousel-cell {
+            {% if section.blocks.size == 1 %}
+                width:100%;
+            {% else %}
+                width: 35%;
+            {% endif %}
+        }
     }
 </style>
 
